scripts for handing the local storage

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
   <h1 class="text-4xl font-bold mb-4">
     Prosty edytor
   </h1>
-  <textarea class="w-full h-64 mb-4 text-black p-3 rounded-lg">
+  <textarea class="textarea--js w-full h-64 mb-4 text-black p-3 rounded-lg">
 
   </textarea>
 <div class="flex justify-end gap-5">
-  <button class="bg-blue-800 px-3 py-1.5 rounded-sm">Wczytaj</button>
-  <button class="bg-green-800 px-3 py-1.5 rounded-sm">Zapisz</button>
+  <button class="load--js bg-blue-800 px-3 py-1.5 rounded-sm">Wczytaj</button>
+  <button class="save--js bg-green-800 px-3 py-1.5 rounded-sm">Zapisz</button>
 </div>
 </main>
   <script src="./main.js" type="module"></script>
