--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./index.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Rubik:wght@400;700&display=swap" rel="stylesheet"> 
+<link rel="manifest" href="manifest.json">
 </head>
-<body class="bg-slate-950 text-white flex min-h-screen justify-center items-center">
+<!-- just in time  class="bg-[hotpink]-->
+<body class="bg-wtf text-white flex min-h-screen justify-center items-center">
   <main class="w-full p-4 max-w-xl">
-  <h1 class="text-4xl font-bold mb-4">
+  <h1 class="text-4xl font-bold mb-4 font-poppins">
     Prosty edytor
   </h1>
   <textarea class="textarea--js w-full h-64 mb-4 text-black p-3 rounded-lg">
 
   </textarea>
 <div class="flex justify-end gap-5">
+  <button class="check--js bg-red-800 px-3 py-1.5 rounded-sm">Sprawdz</button>
   <button class="load--js bg-blue-800 px-3 py-1.5 rounded-sm">Wczytaj</button>
   <button class="save--js bg-green-800 px-3 py-1.5 rounded-sm">Zapisz</button>
 </div>
 </main>
   <script src="./main.js" type="module"></script>
+  <script src="./destruct-spread" type="module"></script>
 </body>
 </html>
  
