--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Rubik:wght@400;700&display=swap" rel="stylesheet"> 
 <link rel="manifest" href="manifest.json">
+<title>Prosty edytor</title>
+<meta name="description" content="Moj prosty edytor">
+<meta property="og:title" content="Prosty edytor">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://wtf3-simple-editor-qkhkh432c-mariuszwuteefowicz.vercel.app/">
+<meta property="og:name" content="./og.png">
 </head>
+
 <!-- just in time  class="bg-[hotpink]-->
 <body class="bg-wtf text-white flex min-h-screen justify-center items-center">
   <main class="w-full p-4 max-w-xl">
