add missing og description

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://wtf3-simple-editor-qkhkh432c-mariuszwuteefowicz.vercel.app/">
 <meta property="og:name" content="./og.png">
+<meta name="og:description" content="Moj prosty edytor">
 </head>
 
 <!-- just in time  class="bg-[hotpink]-->
