--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
 <meta property="og:url" content="https://wtf3-simple-editor-qkhkh432c-mariuszwuteefowicz.vercel.app/">
 <meta property="og:name" content="./og.png">
 <meta name="og:description" content="Moj prosty edytor">
+<link rel="icon" href="./favicon.ico">
+
 </head>
 
 <!-- just in time  class="bg-[hotpink]-->
