--- a/src/index.html
+++ b/src/index.html
@@ -23,15 +23,15 @@
 <body class="bg-wtf text-white flex min-h-screen justify-center items-center">
   <main class="w-full p-4 max-w-xl">
   <h1 class="text-4xl font-bold mb-4 font-poppins">
-    Prosty edytor
+    Prosty edytor <span class="inline-block animate-wiggle">💾</span>
   </h1>
   <textarea class="textarea--js w-full h-64 mb-4 text-black p-3 rounded-lg">
 
   </textarea>
 <div class="flex justify-end gap-5">
-  <button class="check--js bg-red-800 px-3 py-1.5 rounded-sm">Sprawdz</button>
-  <button class="load--js bg-blue-800 px-3 py-1.5 rounded-sm">Wczytaj</button>
-  <button class="save--js bg-green-800 px-3 py-1.5 rounded-sm">Zapisz</button>
+  <button class="check--js duration-500 transition-colors hover:bg-red-950 bg-red-800 px-3 py-1.5 rounded-sm">Sprawdz</button>
+  <button class="load--js duration-500 transition-colors hover:bg-blue-950 bg-blue-800 px-3 py-1.5 rounded-sm">Wczytaj</button>
+  <button class="save--js duration-500 transition-colors hover:bg-green-950 bg-green-800 px-3 py-1.5 rounded-sm">Zapisz</button>
 </div>
 </main>
   <script src="./main.js" type="module"></script>
