--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <!-- just in time  class="bg-[hotpink]-->
-<body class="bg-wtf text-white flex min-h-screen justify-center items-center">
+<body class="bg-wtf text-white flex flex-col gap-10 min-h-screen justify-center items-center">
   <main class="w-full p-4 max-w-xl">
   <h1 class="text-4xl font-bold mb-4 font-poppins">
     Prosty edytor <span class="inline-block animate-wiggle">💾</span>
@@ -34,6 +34,9 @@
   <button class="save--js duration-500 transition-colors hover:bg-green-950 bg-green-800 px-3 py-1.5 rounded-sm">Zapisz</button>
 </div>
 </main>
+<footer>
+  <img class="w-12" src="./wtf.svg" alt="Projekt powstal w ramach szkolenia WTF: Co ten frontend"/>
+</footer>
   <script src="./main.js" type="module"></script>
   <script src="./destruct-spread" type="module"></script>
 </body>
